Fix: Icon alignement in all navs.

--- a/src/components/base/outline-icon/outline-icon.css
+++ b/src/components/base/outline-icon/outline-icon.css
@@ -1,5 +1,10 @@
-:host svg {
-  height: inherit;
-  width: inherit;
-  display: flex;
+:host {
+  .icon {
+    display: flex;
+  }
+
+  svg {
+    height: inherit;
+    width: inherit;
+  }
 }
